--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@ organiser: "Lucas Gatsas"
 
       <div class="cover-content">
         <div class="inner">
-          <div class="hero-wrap">
-            <h2 class="hero-title fade-in"> {{ site.title }}</h2>
+          <div class="hero-wrap"><a href="../index.html">
+            <img alt="Image placeholder" src="https://teleswipe.co/v2/assets/img/brand/logos/png/teleswipe-svg-small-white.png">
+        </a>
+          <!-- <h2 class="hero-title fade-in"> {{ site.title }}</h2>-->  
             <hr>
             <p class="hero-text fade-in">
 
