--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ organiser: "Lucas Gatsas"
 
              {{ site.description }} <br>
             Blogging here about Code & Technology.</p>
-            <p class="subscribe"> <a href="rss/" class="button light fade-in">Subscribe</a></p>
+            <p class="subscribe"> <a href="https://teleswipe.co" class="button light fade-in">teleswipe.co</a></p>
           </div>          
         </div>
       </div>
