--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ organiser: "Lucas Gatsas"
   <div class="site-content inner-wide">
 
     <div class="cover hero">
-         <div class="cover-bg" style="background-image: url('img/IMG_0344.JPG')"></div>
+         <div class="cover-bg" style="background-image: url('https://spaceg.github.io/img/teleswipe-mockup-blog.png')"></div>
 
       <div class="cover-content">
         <div class="inner">
