--- a/archive.html
+++ b/archive.html
@@ -84,10 +84,14 @@ description: "This is my Archive List"
                 </div>
                 <div class="author-box">
 
-  {% if organiser.photo %}
+
+                    <!--    {% if organiser.photo %}
 
 
                     <img src="{{organiser.photo}}" alt="Jane Doe" class="author-avatar" />
+
+
+                -->
 
 
 
