--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ organiser: "Lucas Gatsas"
       <div class="cover-content">
         <div class="inner">
           <div class="hero-wrap"><a href="../index.html">
-            <img alt="Image placeholder" src="img/teleswipe-svg-small-white.png">
+            <img alt="Image placeholder" src="{{ site.baseurl }}/img/teleswipe-svg-small-white.png">
         </a>
           <!-- <h2 class="hero-title fade-in"> {{ site.title }}</h2>-->  
             <hr>
